v2.6.13 版本发布 添加maven配置说明